<resources>
    <string name="app_name">OxxoGas</string>
    <string name="current_cash">Efectivo Actual</string>
    <string name="mxn">%s MXN</string>
    <string name="cumulative_sale">Venta acumulada</string>
    <string name="lts">%s LTS</string>
    <string name="back">Regresar</string>
    <string name="new_sale">Nueva Venta</string>
    <string name="checkout">Realizar cobro</string>
    <string name="choose_pump">Selecciona la bomba</string>
    <string name="available">Disponible</string>
    <string name="error">Error</string>
    <string name="closed">Cerrada</string>
    <string name="in_use">En uso</string>
    <string name="mixed_payment">Pago mixto</string>
    <string name="mixed">Mixto</string>
    <string name="pump">BOMBA</string>
    <string name="notice">Aviso</string>
    <string name="disabled_pump">Bomba desactivada.</string>
    <string name="close">Cerrar</string>
    <string name="spin_premia">Spin Premia</string>
    <string name="spin_premia2">Spin premia</string>
    <string name="does_client_have_spin_premia">¿Cliente tiene su tarjeta de puntos?</string>
    <string name="wait_data">Esperando datos...</string>
    <string name="card_instructions">Acerque la tarjeta o dispositivo,\n o inserte la tarjeta con chip</string>
    <string name="enter_number">Ingrese número</string>
    <string name="continuar">Continuar</string>
    <string name="apply">Aplicar</string>
    <string name="phone">Teléfono</string>
    <string name="read_code">Leer código</string>
    <string name="cancel">Cancelar</string>
    <string name="error_connection">Error de comunicación con Bomba 6, verifique conexión.</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="try_again">Reintentar</string>
    <string name="description">Descripción</string>
    <string name="total">Total</string>
    <string name="price">Precio</string>
    <string name="quantity">Cant.</string>
    <string name="pum_id">Bomba %s</string>
    <string name="payment_method">Medio de pago</string>
    <string name="finish_sell">Realizar cobro</string>
    <string name="card">Tarjeta</string>
    <string name="processing">Procesando...</string>
    <string name="transaction_completed">Transaction finalizado</string>
    <string name="transaction_rejected">Transacción rechazada</string>
    <string name="choose_payment_method">Elegir medio de pago</string>
    <string name="choose_payment_method_mixed">Selecciona el método de pago</string>
    <string name="send_digital_ticket">Enviar ticket digital</string>
    <string name="enter_email">Ingresa el correo electrónico</string>
    <string name="email">Correo electrónico</string>
    <string name="correct_delivery">Envío correcto</string>
    <string name="send">Enviar</string>
    <string name="cash">Efectivo</string>
    <string name="exchange">Cambio</string>
    <string name="zero_amount">$0.00</string>
    <string name="amount">Monto</string>
    <string name="amount_due">Falta por pagar</string>
    <string name="outstanding_payment">Pendiente por pagar</string>
    <string name="outstanding_payment_amount">Pendiente por pagar %s</string>
    <string name="total_amount">Total a pagar</string>
    <string name="cash_payment">Pago en efectivo</string>
    <string name="cash_payment_amount">Pago en efectivo:</string>
    <string name="cash_receipt">Recibo en efectivo</string>
    <string name="email_resume">Correo</string>
    <string name="for_email">Por correo</string>
    <string name="email_success">Envío realizado correctamente</string>
    <string name="print">Imprimir</string>
    <string name="ticket_printing">Impresión de ticket</string>
    <string name="ticket_printing_success">Impresión completada</string>
    <string name="finish">Terminar</string>
    <string name="cash_method">Pago Efectivo</string>
    <string name="card_method">Pago Tarjeta</string>
    <string name="negative_number">- %s</string>
    <string name="pay_with_card">Pago con tarjeta</string>
    <string name="pay_with_card_amount">Pago con tarjeta %s :</string>
    <string name="generate_digital_ticket">Generando ticket digital...</string>
    <string name="amount_receipt_error">El monto no puede ser mayor a %s</string>
    <string name="digital_ticket">Ticket Digital</string>
    <string name="address">Dirección: %s</string>
    <string name="gas_name_attendant">Lo atendió: %s</string>
    <string name="payment_method_ticket">Forma de pago: %s</string>
    <string name="payment_method_ticket_card">Forma de pago: Tarjeta</string>
    <string name="date">Fecha: %s</string>
    <string name="time">Hora: %s</string>
    <string name="folio">Folio: %s</string>
    <string name="amount_money">Monto: %s</string>
    <string name="pump_resume">Bomba: %s</string>
    <string name="sing_in_spin_premia">Forma parte de Spin Premia. Usa tu tarjeta en OXXO GAS para obtener beneficios exclusivos. Consúltalos en la App Spin Premia.</string>
    <string name="total_m_n">Total M.N:</string>
    <string name="import_label">Importe</string>
    <string name="price_un">PrecioUn</string>
    <string name="quantity_label">Cantidad</string>
    <string name="product">Producto</string>
    <string name="pl_information">PL: PL/8081/EXP/ES/2025</string>
    <string name="scan_billing">Escanea desde tu App OXXO GAS para facturar</string>
    <string name="want_listening"><b>¡Queremos escucharte!</b>\nEscanea el QR desde tu cámara</string>
    <string name="client_attention_information">Atención a clientes\n 800 OXXXOGAS (6996 427)\n atencionclientes@oxxogas.com\n Para facturación ingresa:\n www.oxxogas.com</string>
    <string name="client">Cliente</string>
    <string name="sell">Venta</string>
    <string name="card_information">%s\n Terminal: %s\n Afiliación: %s</string>
    <string name="approval">Aprobación: %s</string>
    <string name="charge">Cargo %s</string>
    <string name="arq">ARQC: %s</string>
    <string name="ref">REF: %s</string>
    <string name="aid">AID: %s</string>
    <string name="app_label">APP Label: %s</string>
    <string name="auth_electronic_signature">Autorizado mediante firma electrónica</string>
    <string name="spin_premia_resume">=== Spin Premia ===</string>
    <string name="points_spin_premia">Saldo en puntos: %s</string>
    <string name="mechanic_spin_premia">=== MECANICA Spin Premia ===</string>
    <string name="more_information_spin_premia">Con OXXO GAS y Spin Premia\n <b>Recibes Más</b>\n Consulta los beneficios\n <b>vigentes</b>\n en la App Spin Premia</string>
    <string name="thanks_for_thrust">Gracias por la confianza</string>
    <string name="cant_price">CANT. %sLTS | 1LT %s</string>
    <string name="amount_to_pay">Monto a pagar</string>
    <string name="accept">Aceptar</string>
    <string name="payment_made">Pago realizado</string>
    <string name="generating_ticket">Generando ticket...</string>
    <string name="spin_message_success">Tarjeta asociada correctamente</string>

    <string name="message_print_error">Ocurrió un error de\n comunicación con la impresora</string>
    <string name="message_email_error">Ocurrio un error al enviar el correo</string>
    <string name="success_card">Cargo a tarjeta realizado\n correctamente</string>
    <string name="mixed_total_title">Total:</string>
    <string name="exchange_total_title">Cambio: %s</string>
    <string name="first_card_payment">Primer pago con tarjeta</string>
    <string name="cash_edited_success">Registro de efectivo modificado</string>
    <string name="send_email">Enviar</string>
    <string name="next_payment">Siguiente pago a realizar</string>
    <string name="modify_cash_payment">Modificar pago en efectivo</string>
    <string name="edit">Editar</string>
</resources>