<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_label_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_ticket_card"
        android:textColor="@color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_amount_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_money"
        android:textColor="@color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_label_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="XXXX XXXX XXXX 5555" />

    <TextView
        android:id="@+id/tv_label_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sell"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bank_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_information"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <!-- Aprobación / Cargo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_approval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/approval"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_arq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arq"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ref"
        android:textAllCaps="true"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_aid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aid"
        android:textAllCaps="true"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_label"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/auth_electronic_signature"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
