<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_card_container"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_label_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_ticket_card"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_amount_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_money"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_label_payment_method" />

    <TextView
        android:id="@+id/tv_label_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_amount_card" />

    <TextView
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_client"
        tools:text="XXXX XXXX XXXX 5555" />

    <TextView
        android:id="@+id/tv_label_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sell"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/card_number" />

    <TextView
        android:id="@+id/bank_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_information"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_label_sell" />

    <TextView
        android:id="@+id/tv_approval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approval"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_information" />

    <TextView
        android:id="@+id/tv_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charge"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_information" />

    <TextView
        android:id="@+id/tv_arq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arq"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_approval" />

    <TextView
        android:id="@+id/tv_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ref"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_arq" />

    <TextView
        android:id="@+id/tv_aid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aid"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ref" />

    <TextView
        android:id="@+id/tv_aid_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="l@l"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ref" />

    <TextView
        android:id="@+id/tv_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_aid" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/auth_electronic_signature"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_app_label" />

</androidx.constraintlayout.widget.ConstraintLayout>