<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet"
    android:padding="20dp">

    <View
        android:id="@+id/dragHandle"
        android:layout_width="150dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_spin_premia_title"
        style="@style/BlackBoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/spin_premia"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/dragHandle" />

    <TextView
        android:id="@+id/tv_spin_premia_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/does_client_have_spin_premia"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_spin_premia_title" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="5dp"
        android:text="@string/no"
        style="@style/TransparentButton"
        app:layout_constraintEnd_toStartOf="@id/btn_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_spin_premia_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="70dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_no"
        app:layout_constraintTop_toBottomOf="@id/tv_spin_premia_message" />


</androidx.constraintlayout.widget.ConstraintLayout>