<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottomsheet"
    android:padding="20dp">

    <View
        android:id="@+id/dragHandle"
        android:layout_width="150dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container_method_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/box_dark_blue"
        app:layout_constraintTop_toBottomOf="@id/dragHandle">

        <ImageView
            android:id="@+id/iv_bullet_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_bullet_settings"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_label_title_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/top_container_method_card" />

    <TextView
        android:id="@+id/tv_total_amount"
        style="@style/BlackBoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_title_cash"
        tools:text="$241.40" />

    <TextView
        android:id="@+id/tv_label_cash_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pay_with_card"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total_amount" />

    <TextView
        android:id="@+id/tv_label_amount_cash_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total_amount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eil_enter_card_receipt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_amount_cash_receipt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_card_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/zero_amount"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_error_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/oxxo_red"
        android:visibility="gone"
        android:text="@string/amount_receipt_error"
        app:layout_constraintTop_toBottomOf="@id/eil_enter_card_receipt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_apply_card"
        style="@style/GrayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>