<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet"
    android:padding="20dp">

    <View
        android:id="@+id/dragHandle"
        android:layout_width="150dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_notice_title"
        style="@style/BlackBoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/notice"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/dragHandle" />

    <TextView
        android:id="@+id/tv_notice_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/disabled_pump"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_notice_title" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close_notice"
        style="@style/BlueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/close"
        app:layout_constraintTop_toBottomOf="@id/tv_notice_message" />

</androidx.constraintlayout.widget.ConstraintLayout>