<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet"
    android:padding="20dp">

    <View
        android:id="@+id/dragHandle"
        android:layout_width="150dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bullet_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_email"
        app:layout_constraintEnd_toStartOf="@id/tv_for_email"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragHandle" />

    <TextView
        android:id="@+id/tv_for_email"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/for_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_bullet_settings"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_title_send_email"
        style="@style/BlackBoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_digital_ticket"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/iv_bullet_settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/send_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_send_email">

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/box_white"
            android:text="@string/enter_email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eil_enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close_email"
            style="@style/TransparentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/close"
            app:layout_constraintEnd_toStartOf="@id/btn_send_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eil_enter_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send_email"
            style="@style/GrayButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_close_email"
            app:layout_constraintTop_toBottomOf="@id/eil_enter_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>